--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
 			<artifactId>javafx-swing</artifactId>
 			<version>16</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.27</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
