--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+org.eclipse.jdt.core.prefs
+# .class files
+*.class
