--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
 			<version>8.0.27</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.easytesting/fest-swing -->
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-swing</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
