--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
 			<version>1.2.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/jdom/jdom -->
+		<dependency>
+			<groupId>jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 </project>
