Add compiler version

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
 	<artifactId>S-M-S</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<properties>
+    		<maven.compiler.source>1.6</maven.compiler.source>
+    		<maven.compiler.target>1.6</maven.compiler.target>
+	</properties>
+	
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
 		<dependency>
